css done on navbar

--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
             </div>
             <div class="srch-login-register">
                 <img src="./images/bx_search.png" alt="search">
-                <a href="#">Login</a>
-                <button>Register</button>
+                <a href="#" id="login">Login</a>
+                <button class="register">Register</button>
             </div>
-
         </div>
     </div>
 </body>
