--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
                 <button class="register">Register</button>
             </div>
         </div>
+        <div class="header-txt">
+            <h1>A Classical Education for the Future</h1>
+            <p>We prepare you to engage in the world that is and to help bring about a world that ought to be</p>
+            <button class="get-started">Get Started</button>
+        </div>
     </div>
 </body>
 </html>
