first page done

--- a/index.html
+++ b/index.html
@@ -31,6 +31,24 @@
             <p>We prepare you to engage in the world that is and to help bring about a world that ought to be</p>
             <button class="get-started">Get Started</button>
         </div>
+        <div class="footer">
+            <div class="live-chat">
+                <img src="./images/Frame 6520.png" alt="">
+                <b>Live Chat</b>
+            </div>
+            <div class="examination">
+                <img src="./images/Frame 6520 (1).png." alt="">
+                <b>Examination</b>
+            </div>
+            <div class="compitition">
+                <img src="./images/Frame 6520 (2).png" alt="">
+                <b>Competition</b>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-2">
+        
     </div>
 </body>
 </html>
