second page done

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="./javascript/index.js"></script>
 </head>
 <body>
+    
     <div class="container">
         <div class="nav-bar">
             <div class="logo">
@@ -31,24 +32,31 @@
             <p>We prepare you to engage in the world that is and to help bring about a world that ought to be</p>
             <button class="get-started">Get Started</button>
         </div>
-        <div class="footer">
-            <div class="live-chat">
-                <img src="./images/Frame 6520.png" alt="">
-                <b>Live Chat</b>
-            </div>
-            <div class="examination">
-                <img src="./images/Frame 6520 (1).png." alt="">
-                <b>Examination</b>
-            </div>
-            <div class="compitition">
-                <img src="./images/Frame 6520 (2).png" alt="">
-                <b>Competition</b>
-            </div>
+    </div>
+    <div class="footer">
+        <div class="live-chat">
+            <img src="./images/Frame 6520.png" alt="">
+            <b>Live Chat</b>
+        </div>
+        <div class="examination">
+            <img src="./images/Frame 6520 (1).png." alt="">
+            <b>Examination</b>
+        </div>
+        <div class="compitition">
+            <img src="./images/Frame 6520 (2).png" alt="">
+            <b>Competition</b>
         </div>
     </div>
 
     <div class="container-2">
-        
+        <h1>Top Catogaries</h1>
+        <a href="#">See all</a>
+        <div class="top-catogaries">
+            <img src="./images/Marketing21.png" alt="Marketing21">
+            <img src="./images/design23.png" alt="design23">
+            <img src="./images/Programming25.png" alt="Programming25">
+            <img src="./images/Technology22.png" alt="Technology22">
+        </div>
     </div>
 </body>
 </html>
